src/objects/WorkRequestForm__c.object
<CustomObject>
    <fields>
        <fullName>DesiredCount__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Desired Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailBrandedTitleCoding__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Detail Branded Title Coding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not apply Detailed Branded Title Coding</fullName>
                </value>
                <value>
                    <fullName>Apply 1 Branded Title Code</fullName>
                </value>
                <value>
                    <fullName>Apply 2 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 3 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 4 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 5 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 6 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 7 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 8 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 9 Branded Title Codes</fullName>
                </value>
                <value>
                    <fullName>Apply 10 Branded Title Codes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DetailedInstructions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Detailed Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DirectMarketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Direct Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayField0__c</fullName>
        <description>This field is used for WRF-POLK. USED BY WRF Visualforce System, do not remove</description>
        <label>Display Field HOLDER</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Axles</fullName>
                </value>
                <value>
                    <fullName>Body Style</fullName>
                </value>
                <value>
                    <fullName>Brakes</fullName>
                </value>
                <value>
                    <fullName>Business Address</fullName>
                </value>
                <value>
                    <fullName>Business Carrier Route</fullName>
                </value>
                <value>
                    <fullName>Business City</fullName>
                </value>
                <value>
                    <fullName>Business Email</fullName>
                </value>
                <value>
                    <fullName>Business Employee Size</fullName>
                </value>
                <value>
                    <fullName>Business Employee Size Range</fullName>
                </value>
                <value>
                    <fullName>Business First Name</fullName>
                </value>
                <value>
                    <fullName>Business Last Name</fullName>
                </value>
                <value>
                    <fullName>Business Minority Indicator</fullName>
                </value>
                <value>
                    <fullName>Business NAICS Code</fullName>
                </value>
                <value>
                    <fullName>Business NAICS Desc</fullName>
                </value>
                <value>
                    <fullName>Business Name</fullName>
                </value>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Business Sales Volume</fullName>
                </value>
                <value>
                    <fullName>Business Sales Volume Range</fullName>
                </value>
                <value>
                    <fullName>Business Secondary Name</fullName>
                </value>
                <value>
                    <fullName>Business SIC2 Code</fullName>
                </value>
                <value>
                    <fullName>Business SIC2 Desc</fullName>
                </value>
                <value>
                    <fullName>Business SIC4 Code</fullName>
                </value>
                <value>
                    <fullName>Business SIC4 Desc</fullName>
                </value>
                <value>
                    <fullName>Business Title</fullName>
                </value>
                <value>
                    <fullName>Business Zip</fullName>
                </value>
                <value>
                    <fullName>Business Zip+4</fullName>
                </value>
                <value>
                    <fullName>Cab</fullName>
                </value>
                <value>
                    <fullName>CID</fullName>
                </value>
                <value>
                    <fullName>Cylinders</fullName>
                </value>
                <value>
                    <fullName>Dealer Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayFields__c</fullName>
        <description>This field is used for WRF-POLK. Holds value data for Display Fieldspicklists displayed on VF page</description>
        <label>Display Fields Display</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DoNotIncludeUrbanization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Do Not Include Urbanization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DrivewayCalculator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. request type for Australia form</description>
        <label>Driveway Calculator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateInProcessing__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Duplicate in Processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep Duplicate Records</fullName>
                </value>
                <value>
                    <fullName>Discard Duplicate Records</fullName>
                </value>
                <value>
                    <fullName>Suppress within Sales Campaign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EditRename__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Edit Rename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailAppend__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Email Append</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not Email Append</fullName>
                </value>
                <value>
                    <fullName>Do Email Append</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailDistributionList__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Everyone that requires the report</inlineHelpText>
        <label>Email Distribution List</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field is used for WRF-POLK.  email needed if email is selected as a ship via option</description>
        <inlineHelpText>Additional emails should be listed in the shipping instructions box below</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EngMFG__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Eng MFG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngModel__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Eng Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnhancedDataHygiene__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Enhanced Data Hygiene</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not provide Enhanced Data Hygiene</fullName>
                </value>
                <value>
                    <fullName>Provide Infutor Data Hygiene (only)</fullName>
                </value>
                <value>
                    <fullName>Provide Skip Trace Data Hygiene (only)</fullName>
                </value>
                <value>
                    <fullName>Priority Infutor then Skip Trace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnhancedDataIndicators__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Output format will change.</inlineHelpText>
        <label>Enhanced Data Indicators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apply Branded Destroy Indicator</fullName>
                </value>
                <value>
                    <fullName>Apply Active Stolen Indicator</fullName>
                </value>
                <value>
                    <fullName>Apply Export Indicator</fullName>
                </value>
                <value>
                    <fullName>Apply Correctional Facility Indicator</fullName>
                </value>
                <value>
                    <fullName>Apply Deceased Indicator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EssenVehicleAttributes__c</fullName>
        <description>This field is used for WRF-POLK. This field added to support Essen&apos;s requirement for different Vehicle Attributes values than those available for Southfield.</description>
        <label>Essen Vehicle Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Make Group</fullName>
                </value>
                <value>
                    <fullName>Make</fullName>
                </value>
                <value>
                    <fullName>Model Group</fullName>
                </value>
                <value>
                    <fullName>Model</fullName>
                </value>
                <value>
                    <fullName>Sub_Model</fullName>
                </value>
                <value>
                    <fullName>Body Group</fullName>
                </value>
                <value>
                    <fullName>Body Type</fullName>
                </value>
                <value>
                    <fullName>No of Doors</fullName>
                </value>
                <value>
                    <fullName>No of Seats (not Used Regs)</fullName>
                </value>
                <value>
                    <fullName>Generation Year (not Used Regs)</fullName>
                </value>
                <value>
                    <fullName>Fuel Type</fullName>
                </value>
                <value>
                    <fullName>Engine ccm</fullName>
                </value>
                <value>
                    <fullName>Engine ltr</fullName>
                </value>
                <value>
                    <fullName>Engine cylinders</fullName>
                </value>
                <value>
                    <fullName>Engine kw</fullName>
                </value>
                <value>
                    <fullName>Engine HP</fullName>
                </value>
                <value>
                    <fullName>Turbo (not Used Regs)</fullName>
                </value>
                <value>
                    <fullName>Driven Wheels</fullName>
                </value>
                <value>
                    <fullName>Axle Configuration (not Used Regs)</fullName>
                </value>
                <value>
                    <fullName>Transmission Type</fullName>
                </value>
                <value>
                    <fullName>Number of Gears (not Used Regs)</fullName>
                </value>
                <value>
                    <fullName>Gross Vehicle Weight</fullName>
                </value>
                <value>
                    <fullName>US-Class (not 1:1, CO², Used Regs)</fullName>
                </value>
                <value>
                    <fullName>Kerbweight (only CO²)</fullName>
                </value>
                <value>
                    <fullName>Payload (only CO²)</fullName>
                </value>
                <value>
                    <fullName>TrimLevel  (only 1:1, CO²)</fullName>
                </value>
                <value>
                    <fullName>Height (only 1:1, CO²)</fullName>
                </value>
                <value>
                    <fullName>Length (only CO²)</fullName>
                </value>
                <value>
                    <fullName>Width (only 1:1, CO²)</fullName>
                </value>
                <value>
                    <fullName>Wheelbase (not Used Regs)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventJobTypeSpecific__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>If specific, please detail</inlineHelpText>
        <label>Event/Job Type Specific</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventJobTypes__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Event/Job Types</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExampleReportProvided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>This could be a previous or discontinued version. If yes, please attach details with the form, we will not be able to start the report until these details are provided if you answer yes.</inlineHelpText>
        <label>Example Report Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcelVersion__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Excel Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludeAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Address not available</inlineHelpText>
        <label>Exclude Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeAnyVehicles__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Exclude Any Vehicles?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludeName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Name not available</inlineHelpText>
        <label>Exclude Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpectedDeliverable__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Expected Deliverable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>External Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTPLogin__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Login</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTPPasswordEnc__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Password</label>
        <length>40</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FTPSite__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FileCleanse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>File Cleanse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileTypeVIN__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>File Type VIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Pipe Delimited File</fullName>
                </value>
                <value>
                    <fullName>Flat File Database</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Flat File</fullName>
                </value>
                <value>
                    <fullName>.Delimited Format</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinancialAddressAdditionalFiles__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Financial Address Additional files</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not create additional files</fullName>
                </value>
                <value>
                    <fullName>Create additional Financial Address files</fullName>
                </value>
                <value>
                    <fullName>Assign group and indicators only and apply to output</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinancialAddressProcessing__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>You must provide financial, dealer, insurance, fleet addresses via excel spreadsheet.</inlineHelpText>
        <label>Financial Address Processing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fleet Record Assignment</fullName>
                </value>
                <value>
                    <fullName>Dealer Record Assignment</fullName>
                </value>
                <value>
                    <fullName>Financial Address Record Assignment</fullName>
                </value>
                <value>
                    <fullName>Insurance Address Record Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FitmentVehicleTireReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Fitment, Vehicle &amp; Tire Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FleetFind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Fleet Find</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForecastYears__c</fullName>
        <description>This field is used for WRF-POLK. ESSEN OSF &quot;Forecast Years&quot;</description>
        <label>Forecast Years</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Form Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAMSGeography__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>OE Part Research Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>ISO Country Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAMSSelection__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>OE Part Research Selection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All OE Part Research</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GVWType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>GVW Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIN</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GVWVIN__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>GVW VIN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GVW__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>GVW1 (1-6,000 lbs) GVW2 (6,001-10,000 lbs) GVW3 (10,001-14,000 lbs) GVW4 (14,001-16,000 lbs) GVW5 (16,001-19,500 lbs) GVW6 (19,501-26,000 lbs) GVW7 (26,001-33,000 lbs) GVW8 (33,001 lbs and over)</inlineHelpText>
        <label>VIN GVW/Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger Cars</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>HCV (Global VIO)</fullName>
                </value>
                <value>
                    <fullName>LCV (Global VIO)</fullName>
                </value>
                <value>
                    <fullName>Light Trucks (VIO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GaragePredictor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Garage Predictor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeographyAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Geography Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeographyDetails__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Geography Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GeographyTypeCanada__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Geography Type Canada</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Province</fullName>
                </value>
                <value>
                    <fullName>OEM Custom Geography</fullName>
                </value>
                <value>
                    <fullName>Canadian Census Geography</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US National</fullName>
                </value>
                <value>
                    <fullName>US State</fullName>
                </value>
                <value>
                    <fullName>US County</fullName>
                </value>
                <value>
                    <fullName>US Zip Code</fullName>
                </value>
                <value>
                    <fullName>US Block Group (Offline Only)</fullName>
                </value>
                <value>
                    <fullName>US CBSA</fullName>
                </value>
                <value>
                    <fullName>US Census Tract (Offline Only)</fullName>
                </value>
                <value>
                    <fullName>US DMA</fullName>
                </value>
                <value>
                    <fullName>Canada National</fullName>
                </value>
                <value>
                    <fullName>Canada Province</fullName>
                </value>
                <value>
                    <fullName>Canada Post Code (FSA)</fullName>
                </value>
                <value>
                    <fullName>Canada Census Division (County)</fullName>
                </value>
                <value>
                    <fullName>Canada CMA</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico National</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico County / Municipality</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico Zip Code</fullName>
                </value>
                <value>
                    <fullName>Puerto Rico Block Group (Offline Only)</fullName>
                </value>
                <value>
                    <fullName>Puetro Rico Census Tract (Offline Only)</fullName>
                </value>
                <value>
                    <fullName>Mexico National</fullName>
                </value>
                <value>
                    <fullName>Mexico State</fullName>
                </value>
                <value>
                    <fullName>Mexico Municipality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Global</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GuideFiles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Guide Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ISOPhysicalDamageAndLiabilitySymbols__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>ISO Physical Damage (PD) and Liability, PIP, Medical (LPM)  ISO Must Approve use of their symbols</inlineHelpText>
        <label>ISO Physical Damage &amp; Liability Symbols</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISOPhysicalDamageSymbols__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>ISO Must Approve use of their symbols</inlineHelpText>
        <label>ISO Physical Damage Symbols</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ISORAPASymbols__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>ISO Physical Damage &amp; Liab RAPA Symbols</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Damage (PD)</fullName>
                </value>
                <value>
                    <fullName>Liability (LIAB)</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncludeUrbanization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Include Urbanization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InputFiles__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Input Files</label>
        <summaryForeignKey>InputFile__c.WorkRequestForm__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>